samples/_failures_safe/1761600620_f3184f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afcb1abb.c: In function ‘main’:
./samples/SAFE/__tmp_afcb1abb.c:167:13: error: expected expression at end of input
  167 |             analyze_log_level(
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_afcb1abb.c:167:13: error: too few arguments to function ‘analyze_log_level’
./samples/SAFE/__tmp_afcb1abb.c:63:6: note: declared here
   63 | void analyze_log_level(struct LogEntry* entries, int count, enum LogLevel target_level) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_afcb1abb.c:167:13: error: expected declaration or statement at end of input
  167 |             analyze_log_level(
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_afcb1abb.c:167:13: error: expected declaration or statement at end of input
